# sciencedirect-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_api_key.py
src/: agent.py  cli.py  sciencedirect.py
tests/: test_agent.py
